Publish v1.4: Interactive Modals & UX Overhaul

--- a/gears-simulator.html
+++ b/gears-simulator.html
@@ -20,17 +20,17 @@
     <div class="container">
       <div class="card card-wide">
         <div class="language-switcher">
-            <i class="fas fa-globe"></i>
-            <select id="lang-selector">
-                <option value="en">English</option>
-                <option value="id">Bahasa Indonesia</option>
-                <option value="jp">日本語</option>
-            </select>
+          <i class="fas fa-globe"></i>
+          <select id="lang-selector">
+            <option value="en">English</option>
+            <option value="id">Bahasa Indonesia</option>
+            <option value="jp">日本語</option>
+          </select>
         </div>
         <a href="index.html" class="back-link">
           <i class="fas fa-arrow-left"></i>
           <span data-i18n="back_to_home">Back to Home</span>
-      </a>
+        </a>
         <h2 data-i18n="gear_simulator_title">Gear Simulator</h2>
         <div class="top-actions">
           <button class="btn" id="open-level-modal" data-i18n-title="gears_set_start_levels">⚙️</button>
@@ -38,17 +38,43 @@
         </div>
         <div class="gear-layout">
           <div class="box-left">
-            <div class="gear-box" id="1"><div class="gear-tier" id="gear-tier-1"></div><div id="icon-data-1"></div><div class="gear-stars" id="gear-stars-1"></div></div>
-            <div class="gear-box" id="2"><div class="gear-tier" id="gear-tier-2"></div><div id="icon-data-2"></div><div class="gear-stars" id="gear-stars-2"></div></div>
-            <div class="gear-box" id="3"><div class="gear-tier" id="gear-tier-3"></div><div id="icon-data-3"></div><div class="gear-stars" id="gear-stars-3"></div></div>
+            <div class="gear-box" id="1">
+              <div class="gear-tier" id="gear-tier-1"></div>
+              <div id="icon-data-1"></div>
+              <div class="gear-stars" id="gear-stars-1"></div>
+            </div>
+            <div class="gear-box" id="2">
+              <div class="gear-tier" id="gear-tier-2"></div>
+              <div id="icon-data-2"></div>
+              <div class="gear-stars" id="gear-stars-2"></div>
+            </div>
+            <div class="gear-box" id="3">
+              <div class="gear-tier" id="gear-tier-3"></div>
+              <div id="icon-data-3"></div>
+              <div class="gear-stars" id="gear-stars-3"></div>
+            </div>
           </div>
           <div class="box-middle">
-            <div id="gear-preview" class="hidden"><img src="" alt="Preview Gear" /></div>
+            <div id="gear-preview" class="hidden">
+              <img src="" alt="Preview Gear" />
+            </div>
           </div>
           <div class="box-right">
-            <div class="gear-box" id="4"><div class="gear-tier" id="gear-tier-4"></div><div id="icon-data-4"></div><div class="gear-stars" id="gear-stars-4"></div></div>
-            <div class="gear-box" id="5"><div class="gear-tier" id="gear-tier-5"></div><div id="icon-data-5"></div><div class="gear-stars" id="gear-stars-5"></div></div>
-            <div class="gear-box" id="6"><div class="gear-tier" id="gear-tier-6"></div><div id="icon-data-6"></div><div class="gear-stars" id="gear-stars-6"></div></div>
+            <div class="gear-box" id="4">
+              <div class="gear-tier" id="gear-tier-4"></div>
+              <div id="icon-data-4"></div>
+              <div class="gear-stars" id="gear-stars-4"></div>
+            </div>
+            <div class="gear-box" id="5">
+              <div class="gear-tier" id="gear-tier-5"></div>
+              <div id="icon-data-5"></div>
+              <div class="gear-stars" id="gear-stars-5"></div>
+            </div>
+            <div class="gear-box" id="6">
+              <div class="gear-tier" id="gear-tier-6"></div>
+              <div id="icon-data-6"></div>
+              <div class="gear-stars" id="gear-stars-6"></div>
+            </div>
           </div>
         </div>
         <div class="card-materials">
@@ -73,18 +99,36 @@
     </div>
     <div id="levelModal" class="modal-overlay hidden">
       <div class="modal-content">
-        <h3 data-i18n="gears_set_start_levels">Set Start Levels (0-42)</h3>
+        <h3 data-i18n="gears_set_start_levels">Set Start Levels</h3>
         <form id="levelForm">
-          <div class="level-input-group"><label for="level1">Gear 1 Level:</label><input type="number" id="level1" name="1" min="0" max="42" value="0" /></div>
-          <div class="level-input-group"><label for="level2">Gear 2 Level:</label><input type="number" id="level2" name="2" min="0" max="42" value="0" /></div>
-          <div class="level-input-group"><label for="level3">Gear 3 Level:</label><input type="number" id="level3" name="3" min="0" max="42" value="0" /></div>
-          <div class="level-input-group"><label for="level4">Gear 4 Level:</label><input type="number" id="level4" name="4" min="0" max="42" value="0" /></div>
-          <div class="level-input-group"><label for="level5">Gear 5 Level:</label><input type="number" id="level5" name="5" min="0" max="42" value="0" /></div>
-          <div class="level-input-group"><label for="level6">Gear 6 Level:</label><input type="number" id="level6" name="6" min="0" max="42" value="0" /></div>
+          <div class="level-input-group">
+            <label for="level1" data-i18n="cap_level">Cap</label>
+            <div id="custom-select-1" class="custom-select-container"></div>
+          </div>
+          <div class="level-input-group">
+            <label for="level2" data-i18n="coat_level">Coat</label>
+            <div id="custom-select-2" class="custom-select-container"></div>
+          </div>
+          <div class="level-input-group">
+            <label for="level3" data-i18n="ring_level">Ring</label>
+            <div id="custom-select-3" class="custom-select-container"></div>
+          </div>
+          <div class="level-input-group">
+            <label for="level4" data-i18n="watch_level">Watch</label>
+            <div id="custom-select-4" class="custom-select-container"></div>
+          </div>
+          <div class="level-input-group">
+            <label for="level5" data-i18n="pants_level">Pants</label>
+            <div id="custom-select-5" class="custom-select-container"></div>
+          </div>
+          <div class="level-input-group">
+            <label for="level6" data-i18n="weapon_level">Weapon</label>
+            <div id="custom-select-6" class="custom-select-container"></div>
+          </div>
         </form>
         <div class="modal-buttons">
-            <button type="submit" form="levelForm" class="btn" data-i18n="gears_save_button">Save</button>
-            <button type="button" id="cancelModal" class="btn btn-secondary" data-i18n="gears_cancel_button">Cancel</button>
+          <button type="submit" form="levelForm" class="btn" data-i18n="gears_save_button">Save</button>
+          <button type="button" id="cancelModal" class="btn btn-secondary" data-i18n="gears_cancel_button">Cancel</button>
         </div>
       </div>
     </div>
@@ -94,6 +138,9 @@
         <button id="alert-ok-btn" class="btn">OK</button>
       </div>
     </div>
+    <footer>
+      <p>Copyright &copy; Oriana 2025</p>
+    </footer>
     <audio id="upgrade-sound" src="assets/sounds/upgrade_gear.mp3" preload="auto"></audio>
     <audio id="click-sound" src="assets/sounds/click.mp3" preload="auto"></audio>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
