--- a/charms-simulator.html
+++ b/charms-simulator.html
@@ -173,7 +173,7 @@
     </div>
     <div id="levelModal" class="modal-overlay hidden">
       <div class="modal-content">
-        <h3 data-i18n="charms_set_start_levels">Set Start Levels (0-16)</h3>
+        <h3 data-i18n="charms_set_start_levels">Set Start Levels</h3>
         <form id="levelForm"></form>
         <div class="modal-buttons">
           <button type="submit" form="levelForm" class="btn" data-i18n="gears_save_button">Save</button>
